Bug 386151 - Error using Tools->Scripts->Emmet
Summary: Error using Tools->Scripts->Emmet
Status: RESOLVED FIXED
Alias: None
Product: frameworks-ktexteditor
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.53.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
: 393887 (view as bug list)
Depends on:
Blocks:
 
Reported: 2017-10-24 20:23 UTC by Burkhard Lück
Modified: 2019-01-05 11:45 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.55
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Burkhard Lück 2017-10-24 20:23:04 UTC
Running kate master build from sources Tools->Scripts->Emmet does not work.
Output on konsole is:

kate(20112)/default Kate::ScriptHelper::require: error evaluating ":/ktexteditor/script/libraries/emmet/lib.js" "SyntaxError: Unexpected token `'"

Other actions in Tools->Scripts->[Navigation|Quick Coding|Editing] seem to work properly.
Comment 1 Stolz 2018-01-05 05:26:25 UTC
Same problem here. This post on the forums has some more information

https://forum.kde.org/viewtopic.php?f=25&t=142536
Comment 2 szecsodimlaszlo 2018-01-12 11:44:02 UTC
I have the same problem as well.

Arch Linux
ktexteditor 5.41.0
kate 17.12.0, 17.12.1
Comment 3 szecsodimlaszlo 2018-01-14 09:14:54 UTC
After updating to ktexteditor 5.42.0, the problem still exists.
Comment 4 szecsodimlaszlo 2018-03-21 17:47:26 UTC
After updating to ktexteditor 5.44.0, the problem still exists.

Arch Linux
kate 17.12.3
Comment 5 szecsodimlaszlo 2018-05-13 05:48:34 UTC
*** Bug 393887 has been marked as a duplicate of this bug. ***
Comment 6 wvk 2018-06-04 09:28:32 UTC
Same here: Debian Sid x86_64, Kate Part Version 5.46.0, Kate Version 18.04.0
Comment 7 szecsodimlaszlo 2018-07-13 08:26:13 UTC
After updating to ktexteditor 5.47.0, the problem still exists.

Arch Linux
kate & kwrite 18.04.3
Comment 8 szecsodimlaszlo 2018-12-10 18:02:03 UTC
After updating to ktexteditor 5.53.0, the problem still exists.

$ error evaluating ":/ktexteditor/script/libraries/emmet/lib.js" "SyntaxError: Unexpected token `'"

Arch Linux
kate & kwrite 18.08.3
Qt 5.12.0
Comment 9 Dominik Haumann 2019-01-05 09:31:42 UTC
Git commit 120e8400cad69fb21cab3c7b05dca77904c40fbf by Dominik Haumann.
Committed on 05/01/2019 at 09:31.
Pushed by dhaumann into branch 'master'.

Fix broken Emmet

Summary:
- Improve warning message with line number

Reviewers: #ktexteditor, dhaumann

Reviewed By: #ktexteditor, dhaumann

Subscribers: dhaumann, carewolf, kwrite-devel, kde-frameworks-devel, #ktexteditor

Tags: #kate, #frameworks

Differential Revision: https://phabricator.kde.org/D17970

M  +3    -3    src/script/data/libraries/emmet/lib.js
M  +4    -2    src/script/katescripthelpers.cpp

https://commits.kde.org/ktexteditor/120e8400cad69fb21cab3c7b05dca77904c40fbf
Comment 10 Dominik Haumann 2019-01-05 10:51:01 UTC
Git commit 2f467b46ac6f545993cbbbedc1e67c489c4f076a by Dominik Haumann.
Committed on 05/01/2019 at 10:50.
Pushed by dhaumann into branch 'master'.

Fix emmet script by using HEX instead of OCT numbers in strings

Summary:
This is a follow-up commit to D17970, which did not yet fix it correctly.
The fix now is to use HEX notation instead of OCTAL notation, since
the OCTAL notation seems to not be supported by QML/V4 (which is likely
a bug).

Test Plan: Scripts in Tools > Scripts > Emmet work

Reviewers: carewolf, loh.tar

Reviewed By: carewolf

Subscribers: kwrite-devel, kde-frameworks-devel

Tags: #kate, #frameworks

Differential Revision: https://phabricator.kde.org/D17984

M  +2    -2    src/script/data/libraries/emmet/lib.js

https://commits.kde.org/ktexteditor/2f467b46ac6f545993cbbbedc1e67c489c4f076a