src/script/data/libraries/emmet/lib.js
@@ -5431,8 +5431,8 @@ emmet.define('actionUtils', function(require, _) {
 		 * @return {Object} Object with <code>width</code> and <code>height</code> properties
 		 */
 		getImageSize: function(stream) {
-			var pngMagicNum = "\211PNG\r\n\032\n",
-				jpgMagicNum = "\377\330",
+			var pngMagicNum = "\\211PNG\r\n\\032\n",
+				jpgMagicNum = "\\377\\330",
 				gifMagicNum = "GIF8",
 				pos = 0,
 				nextByte = function() {
